--- a/app/src/main/res/layout/itemlist_card_sets.xml
+++ b/app/src/main/res/layout/itemlist_card_sets.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="96dp"
+    android:elevation="8dp"
+    android:orientation="horizontal"
+    android:layout_margin="8dp">
 
     <TextView
         android:id="@+id/cardset_name"
@@ -11,4 +13,4 @@
         android:layout_margin="16dp"
         android:layout_gravity="center"
         android:textAppearance="?attr/textAppearanceListItem" />
-</LinearLayout>
+</androidx.cardview.widget.CardView>
